<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">En El Mall</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_offers">Ofertas</string>
    <string name="title_section1">Ofertas</string>
    <string name="title_section2">Tiendas</string>
    <string name="title_section3">Centros comerciales</string>
    <string name="title_section4">Configuración</string>
    <string name="title_section5">Acerca</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_desc">En El Mall Logo</string>
    <string name="offers_filter">Filtrar</string>

    <string-array name="navDrawer">
        <item>@string/title_section1</item>
        <item>@string/title_section2</item>
        <item>@string/title_section3</item>
        <item>@string/title_section4</item>
        <item>@string/title_section5</item>
    </string-array>

    <!-- A partir de aqui es una array DEMO para la lista probando el Refresh -->

    <string-array name="offers_names">
        <item>Zapatos a 2x1</item>
        <item>Jeans por 1000 pesos</item>
        <item>Liquidacion de pasillo</item>
        <item>Oferta de 1/2 pizza gratis</item>
        <item>Compra 2 lleva 4</item>
        <item>Participa en rifa de un carro</item>
        <item>No hay mas ofertas</item>
        <item>2x1 en chancleta samurai</item>
        <item>Demo de ofertas</item>
    </string-array>

    <string name="title_activity_details">Oferta info</string>
    <string name="title_activity_store_details">Tienda info</string>
    <string name="title_activity_filter">Filtrar</string>
    <string name="standarStoreFilter">Todas</string>
    <string name="standarCategoriesFilter">Todas</string>
    <string name="promptSpinnerCategory">Seleccione una categoria</string>
    <string name="typeOffer">Todas</string>
    <string name="typeOffer1">Descuentos</string>
    <string name="typeOffer2">Tiempo limitado</string>
    <string name="typeOffer3">Pague 1, llevese 2</string>
    <string name="typeOffer4">Concurso</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>